Se agrego un h1 a index

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                         Al registrarte, aceptas los <a href="#" style="color: rgb(29, 155, 240);">Términos de servicio</a> y la <a href="#" style="color: rgb(29, 155, 240);">Política de privacidad</a>, incluida la política de <a href="#" style="color: rgb(29, 155, 240);">Uso de Cookies</a>.
                     </div> 
                     <div style="margin-top: 30px; font-size: 17px; color: rgn(15,20,25); font-family: TwitterChirp, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 380px; margin-bottom: 20px; font-weight: 700; flex: 1;">
-                        ¿Ya tienes una cuenta?
+                        ¿Ya tienes una cuenta?_______
+                        <h3>asdadasdsa</h3>
                     </div>
                     <button type="button" class="btn btn-outline-light" 
                             style="border: 1px solid gray; 
